<resources>
    <string name="app_name">Phú Lương Pharmacy Support App</string>

    <string name="greeting_holder">Xin chào trưởng quầy</string>
    <string name="label_account">Tài khoản</string>
    <string name="label_password">Mật khẩu</string>
    <string name="label_login">Đăng nhập</string>
    <string name="label_logout">Đăng xuất</string>
    <string name="label_register">Đăng ký</string>
    <string name="label_login_hint_no_account">Chưa có tài khoản?</string>
    <string name="label_login_hint_had_an_account">Đã có tài khoản?</string>
    <string name="label_forgot_password">Quên mật khẩu?</string>

    <string name="action_cancel">Hủy</string>
    <string name="action_ok">Đồng ý</string>

    <string name="hint_account">Tài khoản</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_email">Email của bạn</string>
    <string name="hint_password_verify">Xác nhận mật khẩu</string>
    <string name="hint_user_name">Tên người dùng</string>

    <string name="msg_wrong_account">Tài khoản hoặc mật khẩu không chính xác</string>
    <string name="msg_none_exists_account">Tài khoản không tồn tại</string>
    <string name="msg_missing_element">Thông tin không đầy đủ</string>
    <string name="msg_missing_email">Vui lòng nhập email</string>
    <string name="msg_missing_password">Vui lòng nhập mật khẩu</string>
    <string name="msg_missing_password_verified">Vui lòng xác nhận lại mật khẩu</string>
    <string name="msg_missing_username">Bạn thiếu tên người dùng</string>
    <string name="msg_password_resolve_problem">Vui lòng xác nhận lại mật khẩu</string>
    <string name="msg_email_invalid">Email không hợp lệ</string>
    <string name="msg_success">Đăng nhập thành công</string>
    <string name="msg_failed">Thất bại</string>
    <string name="msg_register_failed">Tài khoản email đã được đăng ký</string>
    <string name="msg_login_failed">Tài khoản không tồn tại</string>

    <string name="label_manage">Quản lý</string>
    <string name="label_history">Lịch sử mua</string>
    <string name="label_home">Chính</string>
    <string name="label_guide">Hướng dẫn</string>
    <string name="label_customer_support">Cá nhân</string>
    <string name="label_list_med">Danh sách thuốc</string>
    <string name="label_history_rpt">Lịch sử hóa đơn</string>
    <string name="label_profit">Số thuốc còn lại</string>
    <string name="label_statistical">Thống kê</string>
    <string name="label_cost">Chi phí thuốc</string>
    <string name="label_revenue">Thu nhập</string>
    <string name="label_out_of_stock">Loại thuốc đã hết</string>
    <string name="label_med_sold">Thuốc đã bán</string>
    <string name="label_total_price">Tổng chi phí</string>
    <string name="label_quantity">Số lượng</string>
    <string name="label_history_list">Danh sách thuốc (lịch sử nhập thuốc)</string>
    <string name="label_history_list_med_sold">Danh sách thuốc (lịch sử đã bán)</string>
    <string name="label_medicine_name">Tên thuốc</string>
    <string name="label_medicine_measurement">Tính bằng</string>
    <string name="label_measurement">Đơn vị thuốc</string>
    <string name="label_medicine_quantity">Số lượng</string>
    <string name="label_numbering">STT</string>
    <!--    // Measurement ID-->
    <string name="MEAS_PILL">Viên</string>>
    <string name="MEAS_DRUG_BOX">Hộp</string>
    <string name="MEAS_BLISTER">Vỉ</string>
    <string name="MEAS_VIAL">Lọ</string>
    <string name="MEAS_BARREL">Thùng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="label_detail">Nhập thuốc</string>
    <string name="msg_get_data_error">Lỗi… Không lấy được dữ liệu từ Database!</string>
    <string name="msg_delete_sold_history_success">Xóa thành công thuốc đã bán</string>
    <string name="msg_delete_add_history_success">Xóa thành công thuốc nhập</string>
    <string name="action_delete">Xóa</string>
    <string name="msg_confirm_delete">Xác nhận xóa</string>
    <string name="confirm_delete">Xác nhận xóa</string>
    <string name="msg_edit_sold_history_success">Chỉnh sửa thuốc đã bán thành công</string>
    <string name="msg_edit_add_history_success">Chỉnh sửa thuốc nhập thành công</string>
    <string name="msg_enter_full_infor">Vui lòng nhập đủ thông tin</string>
    <string name="msg_list_milk_require">Danh sách trống</string>
    <string name="feature_med_sold">Thuốc đã bán</string>
    <string name="feature_add_med">Nhập thuốc</string>
    <string name="edit_history_sold">Sửa lịch sử bán</string>
    <string name="edit_history_add">Sửa lịch sử nhập</string>
    <string name="msg_sold_med_success">Bán thuốc thành công</string>
    <string name="msg_add_med_success">Thêm thuốc thành công</string>
    <string name="label_history_bill">Lịch sử hóa đơn</string>
    <string name="label_date_from">Từ ngày</string>
    <string name="label_date_to">Đến ngày</string>
    <string name="label_total_revenue">Tổng thu: </string>
    <string name="delete_all">Xóa tất cả</string>
    <string name="feature_manage_measurement">Danh sách đơn vị thuốc</string>
    <string name="hint_measurements">Viên/ Vỉ/ Hộp/ Thùng/ …</string>
    <string name="hint_med_name">Tên thuốc</string>
    <string name="msg_confirm_delete_all">Bạn có chắc chắn xóa tất cả?</string>
    <string name="msg_delete_all_medicine_success">Xóa tất cả thành công</string>
    <string name="msg_delete_medicine_success">Xóa thuốc thành công</string>
    <string name="msg_list_measurement_require">Thiếu danh sách đơn vị thuốc</string>
    <string name="action_edit">Sửa</string>
    <string name="edit_medicine_name">Sửa tên thuốc</string>
    <string name="action_add">Thêm</string>
    <string name="add_medicine_name">Thêm tên thuốc</string>
    <string name="msg_medicine_name_require">Thiếu tên thuốc</string>
    <string name="msg_medicine_exist">Thuốc đã tồn tại</string>
    <string name="msg_add_medicine_success">Thêm thuốc thành công</string>
    <string name="msg_edit_medicine_success">Sửa thuốc thành công</string>
    <string name="msg_edit_measurement_success">Sửa đơn vị thành công</string>
    <string name="msg_add_measurement_success">Thêm đơn vị thành công</string>
    <string name="add_measurement_name">Thêm đơn vị thuốc</string>
    <string name="edit_measurement_name">Sửa đơn vị</string>
    <string name="msg_measurement_name_require">Thiếu tên đơn vị</string>
    <string name="msg_measurement_exist">Đơn vị thuốc này đã có</string>
    <string name="msg_delete_all_measurement_success">"Xóa thành công tất cả đơn vị thuốc"</string>
    <string name="msg_delete_measurement_success">Xóa đơn vị thuốc thành công</string>
    <string name="label_total_cost">Tổng: </string>
    <string name="label_added">Nhập thuốc</string>
    <string name="label_used">Xuất thuốc</string>
    <string name="msg_edit_used_history_success">Sửa xuất thuốc thành công</string>
    <string name="feature_medicine_used">Xuất thuốc</string>
    <string name="edit_history_used">Sửa lịch sử xuất thuốc</string>
    <string name="msg_used_med_success">Xuất thuốc thành công</string>
    <string name="msg_delete_used_history_success">Xóa thành công lịch sử xuất</string>
    <string name="msg_on_progress">Đang cập nhật</string>
    <string name="msg_on_progress_view_history">Lịch sử hóa đơn đang cập nhật</string>
    <string name="msg_on_progress_view_med_sold">Xem thuốc đã bán đang cập nhật</string>
    <string name="label_med_in">Nhập thuốc</string>
    <string name="label_med_out">Xuất thuốc</string>
    <string name="label_med_receipt">Đơn thuốc mới</string>
    <string name="label_history_list_med_in">Danh sách thuốc (lịch sử nhập)</string>
</resources>