<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="clickHandlers"
            type="com.hdcompany.plpsa888.fragment.MedicineSellFragment.ClickHandlers" />
    </data>
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.MedicineSellFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="TODO"
            android:scaleType="centerCrop"
            android:src="@drawable/bgr_hinh_nen" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_bottom"
            android:padding="@dimen/define_dimen_10">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_data"
                android:onClick="@{clickHandlers::onClickFab}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:backgroundTint="@color/orange"
                android:contentDescription="@string/app_name"
                android:elevation="20dp"
                android:src="@android:drawable/ic_input_add" />
        </RelativeLayout>

        <RelativeLayout
          android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:padding="@dimen/define_dimen_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/define_dimen_5"
                android:layout_toStartOf="@+id/label_total_price"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/define_dimen_8"
                    android:text="@string/label_quantity"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_total_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/label_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/define_dimen_8"
                android:layout_toStartOf="@+id/tv_total_price"
                android:text="@string/label_total_price"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>
</layout>