<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="account"
            type="com.hdcompany.plpsa888.model.Account" />

        <variable
            name="clickHandlers"
            type="com.hdcompany.plpsa888.activity.RegisterActivity.RegisterClickHandlers" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mBackground7"
        tools:context=".activity.RegisterActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_register"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edt_user_name_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_user_name_register"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@drawable/edt_background"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:ems="10"
            android:focusedByDefault="false"
            android:hint="@string/hint_user_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@={account.userName}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical9"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <EditText
            android:id="@+id/edt_email_register"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@drawable/edt_background"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:focusedByDefault="false"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@={account.userEmail}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical9"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@+id/edt_user_name_register" />

        <EditText
            android:id="@+id/edt_password_register"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@drawable/edt_background"
            android:drawableStart="@drawable/ic_security"
            android:drawablePadding="10dp"
            android:ems="10"
            android:focusedByDefault="false"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@={account.userPassword}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical9"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@+id/edt_email_register" />

        <EditText
            android:id="@+id/edt_confirm_password_register"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@drawable/edt_background"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:ems="10"
            android:focusedByDefault="false"
            android:hint="@string/hint_password_verify"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@={account.verifiedPassword}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical9"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@+id/edt_password_register" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:onClick="@{clickHandlers::onRegisterClicked}"
            android:text="@string/label_register"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toEndOf="@+id/edt_confirm_password_register"
            app:layout_constraintStart_toStartOf="@+id/edt_confirm_password_register"
            app:layout_constraintTop_toTopOf="@+id/guideline6" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical9"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@+id/btn_register">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/label_login_hint_had_an_account"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:clickable="true"
                android:onClick="@{clickHandlers::onLoginClicked}"
                android:text="@string/label_login"
                android:textColor="@color/yellow"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>